force-app/main/default/objects/Evaluation__c/Evaluation__c.object-meta.xml
<CustomObject>
    <description>Objeto que registra las evaluaciones de los presupuestos de asados realizados por los clientes</description>
    <label>Evaluacion</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluaciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>