force-app/main/default/objects/Evaluation__c/fields/Barbecue_Budget__c.field-meta.xml
<CustomField>
    <fullName>Barbecue_Budget__c</fullName>
    <description>Relación con el presupuesto de asado asociado a esta evaluación.</description>
    <inlineHelpText>Seleccione el presupuesto de asado que está evaluando.</inlineHelpText>
    <label>Presupuesto Asado</label>
    <referenceTo>Barbecue_Budget__c</referenceTo>
    <relationshipLabel>Evaluaciones</relationshipLabel>
    <relationshipName>Evaluaciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>