force-app/main/default/objects/Evaluation__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <description>Representa las observaciones sobre la calificación otorgada</description>
    <inlineHelpText>Si tiene algún comentario acerca del presupuesto evaluado, puede ingresarlo aquí.</inlineHelpText>
    <label>Observaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>