force-app/main/default/objects/Evaluation__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Representa la puntuación otorgada por el cliente al presupuesto.</description>
    <inlineHelpText>Ingrese una puntuación de 0 a 10 para evaluar este presupuesto.</inlineHelpText>
    <label>Puntuacion</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>