force-app/main/default/objects/Evaluation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Barbecue_Budget__c</columns>
    <columns>Score__c</columns>
    <columns>Observations__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>